# ModelCheckingInputParser

./: CMakeLists.txt  FormulaUtils.c  FormulaUtils.h  MCIP.c  MCIP.h  commonUtils.c  commonUtils.h
Fairness/: FairnessParser.c  FairnessParser.h
FileReaderUtils/: fileReaderUtils.c  fileReaderUtils.h  typeFinder.c  typeFinder.h
FormulaParser/: FormulaParser.c  FormulaParser.h
VariablesParser/: variablesReader.c  variablesReader.h
